fixed spacing on live and github buttons when hovering over portfolio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2594,3 +2594,9 @@
 	top: -200px;
 	height: 0px;
 }
+
+.portfolio-app-options > a {
+	width: 150px;
+	padding: .5em 1em;
+	margin: 0 1em;
+}
